--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,14 @@
-FROM python:3.11
+FROM python:3.12
 
 WORKDIR /app
 
 RUN pip install pipenv
 
+ENV PIPENV_VENV_IN_PROJECT=1
+
 COPY Pipfile Pipfile.lock ./
 
-RUN pipenv install --system --deploy
+RUN pipenv install --dev --system --deploy
 
 COPY . .
 
