--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 services:
   backend:
     build: ./backend
-    ports:
-      - "8000:8000"
     volumes:
       - ./backend:/app
+    ports:
+      - "8000:8000"
     environment:
       - DJANGO_SETTINGS_MODULE=beer_store.settings
+      - PIPENV_VENV_IN_PROJECT=1
 
   # frontend:
   #   build: ./frontend/beer-store-ui
