Enable frontend service in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
       - DJANGO_SETTINGS_MODULE=beer_store.settings
       - PIPENV_VENV_IN_PROJECT=1
 
-  # frontend:
-  #   build: ./frontend/beer-store-ui
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - ./frontend/beer-store-ui:/app
-  #     - /app/node_modules
-  #   depends_on:
-  #     - backend
+  frontend:
+    build: ./frontend/beer-store-ui
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend/beer-store-ui:/app
+      - /app/node_modules
+    depends_on:
+      - backend
