Frontend: Added test coverage

--- a/frontend/beer-store-ui/tsconfig.json
+++ b/frontend/beer-store-ui/tsconfig.json
@@ -12,11 +12,13 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["jest", "@testing-library/jest-dom"],
     "plugins": [
       {
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     }
