--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -9,8 +9,8 @@ djangorestframework = "~=3.15.2"
 django-cors-headers = "~=4.3.0"
 
 [dev-packages]
-pytest = "~=7.4.0"
-pytest-django = "~=4.5.2"
+pytest = "*"
+pytest-django = "*"
 black = "~=23.7.0"
 isort = "~=5.12.0"
 flake8 = "~=6.1.0"
